--- a/app_lmao/gradle/libs.versions.toml
+++ b/app_lmao/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.12.3"
 kotlin = "2.0.21"
+ksp = "2.0.21-1.0.20"  # <-- TE FALTA ESTA LÍNEA
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -29,4 +30,4 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" } # <-- TE FALTA ESTA LÍNEA
